ADEN-9362 Fixing page navigation jumping issue

--- a/platforms/sports/styles.scss
+++ b/platforms/sports/styles.scss
@@ -46,6 +46,13 @@
 		}
 	}
 
+	&.fixed-page-nav {
+		.page-navigation {
+			position: unset;
+			box-shadow: unset;
+		}
+	}
+
 	.header {
 		min-height: 43px;
 	}
